Completamento D12: deployment e osservabilità Cloud
